# casper-sandbox

frontend-client/: package-lock.json  package.json
frontend-client/src/: App.js  Connect.js  ConnectWallet.js  DeployIncrement.js  Query.js  deploy.json  test.http
project-1/: .gitignore  Makefile
project-1/client/: miniwiki.md  package-lock.json  package.json
project-1/client/src/: ContractEvents.ts  ContractSDK.ts  EventHandler.ts  ExampleContractClient.ts  TestScenario.ts  Utils.ts
project-1/client/wasm/: contract.wasm
project-1/contract/src/: constants.rs  contract_consts.rs  entry_points.rs  events.rs  lib.rs  main.rs  utils.rs
project-1/tests/: Cargo.toml
project-1/tests/src/: add.rs  append.rs  events.rs  gas_cost.rs  integration_tests.rs  lib.rs  project-1.code-workspace  register.rs  size.rs  v_1_deploy.rs
project-1/tests/src/utility/: assert.rs  constants.rs  debug.rs  misc.rs  mod.rs  query.rs  setup.rs
project-1/tests/wasm/: contract.wasm
scripts/: deploy-contract.sh  query-deploy-state.sh  query-state.sh  query-whole-state.sh
test-backend/: Cargo.toml  dev-wiki.md
test-backend/src/: main.rs
test-ts-client/: .gitignore  Increment.ts  package-lock.json  package.json
